--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - run: npm i express
+    - run: npm i path
+    - run: npm i body-parser
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
